--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "reload-challenge",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,17 +8,38 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
+    "@types/react-native-calendars": "^1.1264.3",
+    "@types/styled-components-react-native": "^5.1.3",
+    "date-fns": "^2.26.0",
     "expo": "~43.0.2",
+    "expo-app-loading": "^1.2.1",
+    "expo-linear-gradient": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-calendars": "^1.1260.0",
+    "react-native-modal": "^11.10.0",
+    "react-native-pager-view": "5.4.6",
+    "react-native-tab-view": "^3.0.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "babel-plugin-root-import": "^6.6.0",
+    "eslint": "^7.23.0",
+    "eslint-config-universe": "^7.0.1",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "^3.10.0",
+    "prettier": "^2.2.1",
     "typescript": "~4.3.5"
   },
   "private": true
